--- a/interfaces/templates/guest_interface.html
+++ b/interfaces/templates/guest_interface.html
@@ -37,7 +37,7 @@
                         <h1>Witamy w VIGO photonics!</h1>
                         <h2>Proszę podaj swoje dane:</h2>
                         <form id="add-form" method="post">
-                            
+                            {% csrf_token %}
                             <input type="text" name="guest_first_name" placeholder="Imię"/><br/>
                             <input type="text" name="guest_last_name" placeholder="Nazwisko"/><br/>
                             <input type="text" name="keeper_full_name" placeholder="Opiekun"/><br/>
